--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -7,6 +7,7 @@
 .label {
   margin: 0;
   margin-top: 25px;
+  margin-left: 15px;
 }
 .input {
   border: 1px solid #000;
@@ -14,6 +15,7 @@
   width: 100%;
   padding: 4px 8px;
   outline: none;
+  margin-left: 15px;
 }
 .input:hover,
 .input:focus,
